# fetchkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live.yml  release.yml
examples/: example_config.yaml
scripts/: build_discovery_index.py  validate_catalog.py
src/fetchkit/: __init__.py  __main__.py  cli.py  collector.py  config_loader.py
src/fetchkit/discovery/: __init__.py  autodiscover.py  catalog.py  core.py  embedding.py  errors.py  external.py  ranking.py  schemas.py
src/fetchkit/discovery/data/: CATALOG.md  catalog.json
src/fetchkit/fetchers/: __init__.py  arxiv.py  base.py  bluesky.py  github.py  hackernews.py  lobsters.py  mastodon.py  registry.py  rss.py  stackexchange.py  suggest_registry.py
src/fetchkit/http/: __init__.py  client.py  rate_limit.py  ssrf.py
src/fetchkit/schemas/: __init__.py  base.py  collector.py  config.py  contracts.py  describe.py  fetcher.py  post.py
src/fetchkit/utils/: __init__.py  time.py
tests/: cli_test.py  collector_test.py  config_loader_test.py
tests/discovery/: autodiscover_test.py  catalog_test.py  cli_test.py  discover_test.py  ranking_test.py
tests/fetchers/: arxiv_test.py  bluesky_test.py  github_test.py  hackernews_test.py  lobsters_test.py  mastodon_test.py  registry_test.py  rss_test.py  stackexchange_test.py  suggest_test.py
tests/http/: client_test.py  rate_limit_test.py  ssrf_test.py
tests/schemas/: config_test.py  contracts_test.py  describe_test.py  fetcher_test.py  post_test.py  time_consistency_test.py
tests/testdata/: sample_atom.xml  sample_rss.xml
tests/testdata/configs/: invalid_unknown_field.yaml  invalid_yaml.yaml  valid_minimal.yaml
tests/testdata/discovery/: catalog_fixture.json  sample_feed.xml  sample_page.html
tests/utils/: time_test.py
