[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The importable package and CLI are still `fetchkit`;
# the `fetchkit` PyPI name was already taken by an unrelated project.
name = "fetchkit-agents"
version = "0.1.1"
description = "A YAML-configured data fetching library for agentic applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mete morris", email = "morrismete@gmail.com" }]
keywords = ["rss", "hackernews", "fetcher", "data-collection", "agents", "llm", "feed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "feedparser>=6.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
fetchkit = "fetchkit.cli:main"

[project.urls]
Homepage = "https://github.com/metemorris/fetchkit"
Repository = "https://github.com/metemorris/fetchkit"
Issues = "https://github.com/metemorris/fetchkit/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fetchkit = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "live: marks tests as live/networked (deselect with '-m \"not live\"')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Builtin fetchers are imported here purely for their registration side effects.
"src/fetchkit/fetchers/__init__.py" = ["F401"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true
